# SmartDocs-Agent-DesktopApp

./: .gitignore  README.md  desktop_gateway.py  desktop_server.py  package-lock.json  package.json
.github/workflows/: desktop-build.yml
agent/tests/: test_desktop_mode.py  test_runtime_recovery_contract.py  test_settings_privacy_api.py  test_sidebar_ui_contract.py
desktop/: gen-icon.js
desktop/sidecar/: requirements-core.txt  smartdocs-sidecar.spec
desktop/splash/: index.html  splash.js
desktop/tests/: test_gateway.py  test_sidecar_integration.py
desktop/tests/ui/: privacy.test.mjs  sidebar.test.mjs
docs/: DESKTOP_ARCHITECTURE.md  MACOS_BUILD.md
docs/diagrams/: README.md  build_desktop_diagrams.py  desktop-agent-flow.drawio  desktop-deployment.drawio  desktop-document-flow.drawio  desktop-gateway-flow.drawio  desktop-model-routing.drawio  desktop-overall-architecture.drawio  desktop-privacy-local-only.drawio  desktop-runtime-architecture.drawio  desktop-runtime-selection-flow.drawio
scripts/: build-sidecar.ps1  build-sidecar.sh  dev-desktop.sh  smoke-gui-linux.sh  test-desktop.sh
services/: desktop_mode.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  runtime.rs
static/: app.js  i18n.js  index.html  style.css
