[package]
name = "smartdocs-desktop"
version = "0.1.0"
description = "SmartDocs desktop shell (Tauri v2) — owns the Python backend sidecar"
edition = "2021"
license = "MIT"
repository = "https://github.com/imtoiteu/SmartDocs-Agent-DesktopApp"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde_json = "1"
# Plain-HTTP client for the 127.0.0.1 health/shutdown calls — no TLS needed.
ureq = { version = "2", default-features = false }
getrandom = "0.2"
# SIGINT/SIGTERM → clean Tauri exit (so stop_sidecar always runs)
ctrlc = { version = "3", features = ["termination"] }

[target."cfg(target_os = \"linux\")".dependencies]
# PR_SET_PDEATHSIG: the kernel TERMs the sidecar if the shell dies, even on
# SIGKILL — guaranteed no orphan on Linux.
libc = "0.2"

[features]
# Required by `tauri build` for production asset serving. Do not remove.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
# Thin LTO: near-fat binary size at a fraction of the link time — fat LTO with
# codegen-units=1 made release links take 20+ minutes on 4-core machines.
lto = "thin"
