[package]
name = "smartdocs-desktop"
version = "0.1.0"
description = "SmartDocs desktop shell (Tauri v2) — owns the Python backend sidecar"
edition = "2021"
license = "MIT"
repository = "https://github.com/imtoiteu/SmartDocs-Agent-DesktopApp"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
# Native folder picker for the “Existing WebApp runtime” selection.
tauri-plugin-dialog = "2"
serde_json = "1"
# HTTP client for 127.0.0.1 health/shutdown calls and the Remote-Server
# Test Connection probe (rustls for https servers).
ureq = { version = "2", default-features = false, features = ["tls"] }
getrandom = "0.2"
# SIGINT/SIGTERM → clean Tauri exit (so stop_all always runs)
ctrlc = { version = "3", features = ["termination"] }

[target."cfg(unix)".dependencies]
# Linux: PR_SET_PDEATHSIG — the kernel TERMs the backend if the shell dies,
# even on SIGKILL. macOS/Linux: SIGTERM for the GLM helper's graceful stop.
libc = "0.2"

[features]
# Required by `tauri build` for production asset serving. Do not remove.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
# Thin LTO: near-fat binary size at a fraction of the link time — fat LTO with
# codegen-units=1 made release links take 20+ minutes on 4-core machines.
lto = "thin"
